<resources>
    <string name="app_name">Food catalog</string>
    <string name="title_home">Home</string>
    <string name="title_basket">Basket</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="searchStr" translatable="false">Поиск еще не сделан:(</string>
    <string name="name" translatable="false">Name</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="AddBasket">Add to basket</string>
    <string name="_560">560г</string>
    <string name="_1">1</string>
</resources>