<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/shape"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shape_catalog" />

        <ImageView
            android:id="@+id/artCategory"
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/shape"
            app:layout_constraintEnd_toEndOf="@+id/shape"
            app:layout_constraintStart_toStartOf="@+id/shape"
            app:layout_constraintTop_toTopOf="@+id/shape" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/shape"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/shape"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layaut_mini_icon_round"
            android:backgroundTint="@color/grey"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/minus" />

            <TextView
                android:id="@+id/cntBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/_1" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/weightDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:text="@string/_560"
            app:layout_constraintBottom_toBottomOf="@+id/priceDish"
            app:layout_constraintStart_toEndOf="@+id/priceDish"
            app:layout_constraintTop_toTopOf="@+id/priceDish" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>